# traj-opt-admm

./: CMakeLists.txt  README.md  commit.sh
Config File/: 3D.json
HighOrderCCD/: Energy.h  Energy_admm.h  Gradient_admm.h  Optimal_plane.h  Separate.h  Step.h
HighOrderCCD/BVH/: BVH.cpp  BVH.h
HighOrderCCD/BVH/src/: AABB.cc  AABB.h
HighOrderCCD/CCD/: CCD.h
HighOrderCCD/OMPL/: OMPL.cpp  OMPL.h
HighOrderCCD/Optimization/: Optimization3D_admm.h  Optimization3D_am.h  Optimization3D_multi.h  Optimization3D_target.h
HighOrderCCD/Utils/: CCDUtils.cpp  CCDUtils.h
Main/: admmPathPlanning3D.cpp  amPathPlanning3D.cpp  multiPath.cpp  multiPathPlanning3D.cpp  omplInit.cpp  omplPathPlanning3D.cpp  targetPathPlanning3D.cpp  testmultiPathPlanning3D.cpp
cmake/: FindLIBIGL.cmake  LoadLibs.cmake
lib/libigl/include/igl/: cotmatrix.cpp
lib/libigl/include/igl/opengl/: ViewerData.cpp  ViewerData.h
lib/opengjk/include/openGJK/: openGJK.h
lib/opengjk/src/: openGJK.c
test/: data_deal.cpp  test_admm.cpp
